# chordflower

./: .flake8  .gitignore  404.html  README.md  browserconfig.xml  code.code-workspace  glossary.html  index.html  index.md  manifest.json  mkdocs-local.yml  mkdocs.yml  pygments.min.css  pyproject.toml  scripts.py  site.webmanifest  sitemap.xml  tags.html
.github/workflows/: website.yml
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  workspace
.obsidian/plugins/obsidian-dynamic-toc/: data.json
coding/: index.html
coding/werwolf/: index.html
corporate/: code_of_conduct.html  mission.html  values.html
corporate/code_of_conduct/: index.html
corporate/mission/: index.html
corporate/values/: index.html
docs/: browserconfig.xml  glossary.md  index.md  manifest.json  pygments.css  site.webmanifest
docs/coding/: index.md
docs/coding/werwolf/: index.md
docs/corporate/: code_of_conduct.md  values.md
docs/licenses/: apache-v2.0.md  gnu-agpl-v3.0.md  gnu-gpl-v3.0.md
docs/management/: areas.md  index.md  product.md  states.md  taxonomies.md  tools.md  workflows.md
docs/wiki/: faq.md  update.md
licenses/: apache-v2.0.html  gnu-agpl-v3.0.html  gnu-gpl-v3.0.html
licenses/apache-v2.0/: index.html
licenses/gnu-agpl-v3.0/: index.html
licenses/gnu-gpl-v3.0/: index.html
management/: areas.html  index.html  product.html  states.html  status.html  taxonomies.html  tools.html  workflows.html
overrides/: main.html
search/: search_index.json
static/: browserconfig.xml  browserconfig.xml.tmpl  simple_service_worker.js  site.webmanifest  site.webmanifest.tmpl
wiki/: faq.html  update.html
wiki/faq/: index.html
wiki/update/: index.html
