[tool.poetry]
name = "chordflower"
version = "0.1.0"
description = "A static wiki about my projects"
authors = ["carddamom <carddamom@tutanota.com>"]
license = "CC-BY-NC-ND-4.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
Pygments = "^2.11.2"
md-mermaid = "^0.1.1"
tags-macros-plugin = {git = "https://github.com/jldiaz/mkdocs-plugin-tags"}
mkdocs-htmlproofer-plugin = "^0.8.0"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-enumerate-headings-plugin = "^0.5.0"
qrcode = "^7.3.1"
mkdocs-material = "^8.1.10"
mkdocs-macros-plugin = "^0.6.4"
markdown-captions = "^2.1.1"
mkdocs-section-index = "^0.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
